tests/toy/neg/001568_mutation.toylang
program a = { while bool a do sleep; } .
